@@ -164,6 +164,26 @@ all judgehosts with this restriction and then rejudging a set of submissions
 as many times as there are judgehosts. This will lead to the situation that
 each judgehosts has judged every submission exactly once.
 
+Disk space and cleanup
+----------------------
+The judgehost caches testcase and executable data and stores various
+logs, compiled submissions, etc. on disk. Depending on the amount of
+disk space available and size and length of the contest, you may run
+out of free space. The configuration setting ``diskspace_error`` will
+make a judgehost abort before it actually crashes when running out of
+space.
+
+When you run out of space, the script ``dj_judgehost_cleanup`` can be
+used to remove some unnecessary files. It allows you to remove cache
+and judging data. The judging data is generated and required during
+judging, but afterwards can be safely removed if you don't need it
+anymore for debugging or auditing.
+
+Finally, if a judgedaemon crashes, this can leave stale bind-mounts to
+the chroot environment. Run ``dj_judgehost_cleanup mounts`` to clean
+these up. Run ``dj_judgehost_cleanup help`` for a list of all
+commands.
+
 Solutions to common issues
 --------------------------
 
