@@ -7,4 +7,5 @@
 /dj_make_chroot
 /dj_make_chroot_docker
 /dj_run_chroot
+/dj_judgehost_cleanup
 /icpctools
