@@ -9,6 +9,7 @@ Version 7.3.0 - DEV
  - Add team display name support.
  - Add support for importing teams, organizations and groups using JSON.
  - Minimum PHP version is now 7.2.5.
+ - Add script dj_judgehost_cleanup for maintenance on judgehosts.
 
 Version 7.2.0 - 4 January 2020
 ------------------------------
